# journal-finder

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  profiles.py  ranking.py  schemas.py
app/data/: journals.json
tests/: test_api.py  test_ranking.py
